syntax = "proto3";

package com.example.demo.grpc;

option java_multiple_files = true;

service UserService {
  rpc GetUser(GetUserRequest) returns (User);
  rpc UpdateUser(UpdateUserRequest) returns (User);
}

message GetUserRequest {
  string userId = 1;
}

message UpdateUserRequest {
  string userId = 1;
  string name = 2;
  string email = 3;
}

message User {
  string userId = 1;
  string name = 2;
  string email = 3;
}